src/tests/snapshots/swayward__tests__window_opening__check_target_size@fsT-dhU-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    default-window-height {  }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1240 × 680, bounds: 1240 × 680, states: [Activated]
